* OTH#0000 Code fix following 5d5a04299c: missing kwargs in method

Version 1.14 - 2017-11-09
* BUG#7434 Add rec name for indemnification rule in list view
* BUG#6350 Fix crash when creating indemnification period with the wizard

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02
* FEA#0000 Check if the beneficiary is correct (In case of rupture)
* FEA#0000 Transfer claim services between contracts
* FEA#0000 Filter complementary data on delivered service according to selected rules

Version 1.8 - 2016-07-06
* FEA#0000 Module creation